--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="invoice-container">
+    <!-- <div class="invoice-container">
       <div class="logo">
         <img
           src="https://public-consumables.s3.eu-west-2.amazonaws.com/sendscript-logo.png"
@@ -24,6 +24,35 @@
         <p>In the meantime, you can check your account status by logging into the platform.</p>
         <p>Login URL: <a href="https://app.sendscript.com/login">https://app.sendscript.com/login</a></p>
         <p>We're thrilled to have you on board and look forward to supporting you in delivering top-quality healthcare.</p>
+      </div>
+      <br>
+      <div class="content">
+        <p>Regards,</p>
+        <p>The SendScript Team</p>
+      </div>
+
+      <div class="footer"></div>
+    </div> -->
+
+
+    <div class="invoice-container">
+      <div class="logo">
+      </div>
+      
+      <div class="header">
+        <img
+          src="ss_logo.png"
+          alt="SendScript Logo"
+        />
+        Reset Your Sendscript Password  - Verification code Inside 
+      </div>
+
+      <div class="content">
+        <p>Dear Dr. John Smith </p>
+        <p>We received a request to reset your Sendscript account password. </p>
+        <p>Please use the following Verification Code to proceed: </p>
+        <p>Verification Code: 123456 </p>
+        <p>This code is valid for the next 10 minutes. If you did not request a password reset, please ignore this message. </p>
       </div>
       <br>
       <div class="content">
