--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SendScript Email Template Preview</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- <div class="invoice-container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SendScript Email Template Preview</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- <div class="invoice-container">
       <div class="logo">
         <img
           src="https://public-consumables.s3.eu-west-2.amazonaws.com/sendscript-logo.png"
@@ -35,32 +40,68 @@
     </div> -->
 
 
-    <div class="invoice-container">
-      <div class="logo">
-      </div>
-      
-      <div class="header">
-        <img
-          src="ss_logo.png"
-          alt="SendScript Logo"
-        />
-        Reset Your Sendscript Password  - Verification code Inside 
-      </div>
-
-      <div class="content">
-        <p>Dear Dr. John Smith </p>
-        <p>We received a request to reset your Sendscript account password. </p>
-        <p>Please use the following Verification Code to proceed: </p>
-        <p>Verification Code: 123456 </p>
-        <p>This code is valid for the next 10 minutes. If you did not request a password reset, please ignore this message. </p>
-      </div>
-      <br>
-      <div class="content">
-        <p>Regards,</p>
-        <p>The SendScript Team</p>
-      </div>
-
-      <div class="footer"></div>
+  <div class="invoice-container">
+    <div class="logo">
     </div>
-  </body>
-</html> 
+
+    <div class="header"
+      style="background-image: url(banner_group_doc.png);height: 130px;background-size: contain;background-repeat: no-repeat;background-position: calc(100% - 16px) 50%;">
+      <div
+        style="display: flex;align-items: flex-start;justify-content: space-between;flex-direction: column;width: 60%;height: 100%;">
+        <img src="ss_logo.png" alt="SendScript Logo">
+        <div style="   
+           display: flex;
+            text-align: left;
+            font-size: 16px;
+            line-height: 26px;
+        ">
+          Seamless Integration For
+          Better Healthcare Solutions
+        </div>
+      </div>
+    </div>
+    <div class="email-container">
+      <div>
+        <div class="email-title">
+          Reset Your Sendscript Password
+        </div>
+        <div class="email-content">
+          <p class="email-content_text">Dear Dr. John Smith </p>
+          <p class="email-content_text">We received a request to reset your Sendscript account password. </p>
+          <p class="email-content_text">Please use the following Verification Code to proceed:</p>
+          <div class="email-content_verification_code_container">
+            <div class="email-content_verification_code">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+              <div>4</div>
+              <div>5</div>
+              <div>6</div>
+            </div>
+          </div>
+          <p class="email-content_text">This code is valid for the next 10 minutes. If you did not request a password reset, please ignore this message.</p>
+        </div>
+        <br>
+        <div class="email-content_text">
+          <p>Regards,</p>
+          <p>The SendScript Team</p>
+        </div>
+      </div>
+  
+      <div class="footer">
+        <p class="email-footer_text">116 Harley Street, London, W1G 7JL</p>
+        <div class="email-footer_text" style="display: flex;gap: 10px;">
+          <p>support@sendscript.com</p>
+          <p>+44 20 7486 1546</p>
+        </div>
+        <div class="email-footer_text" style="display: flex;gap: 10px;">
+          <p>© 2025 SendScript, Inc. All Rights Reserved.</p>
+          <p>Privacy Policy</p>
+          <p>Terms and Conditions</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
